--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,55 +1,69 @@
 <div class="container d-flex justify-content-center align-items-center" style="height: 100vh">
-	<div class="w-75">
-		<div>
-			<h1 class="text-center">TODO APP</h1>
-			<div class="border shadow p-5">
-				<form class="w-100" [formGroup]="todoForm">
-					<div class="w-75 mx-auto row">
-						<div class="col-10">
-							<input type="text" class="form-control form-control-sm" placeholder="Todo" formControlName="title">
+		<div class="w-75">
+			<div class="alert alert-success d-flex align-items-center" role="alert" *ngIf="success">
+				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi check-circle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+					<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+				</svg>
+				<div class="ml-2">Successful</div>
+			</div>
+			<div class="alert alert-danger d-flex align-items-center" role="alert" *ngIf="error.required || error.minlength || error.maxlength">
+				<svg *ngIf="error.required || error.minlength || error.maxlength" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+					<path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+				</svg>
+				<div class="ml-2" *ngIf="error.required">Task Title Is Required!</div>
+				<div class="ml-2" *ngIf="error.minlength">Task title has to be 3 or more characters in length</div>
+				<div class="ml-2" *ngIf="error.maxlength">Task title has to be 10 or less characters in length</div>
+			</div>
+			<div>
+				<h1 class="text-center text-white">TO DO LIST</h1>
+				<div>
+					<form class="w-100" [formGroup]="todoForm" (ngSubmit)="submit()">
+						<div class="w-75 mx-auto row">
+							<div class="col-10">
+								<input type="text" class="form-control form-control-sm" placeholder="Todo" formControlName="title">
+							</div>
+							<div class="col-2">
+								<button type="submit" class="btn btn-success btn-sm">Submit</button>
+							</div>
 						</div>
-						<div class="col-2">
-							<button type="submit" class="btn btn-primary btn-sm" (click)="submit()">Submit</button>
+					</form>
+	
+					<div class="card border-0 mt-4 mb-4">
+						<div class="card-body p-3 d-flex justify-content-between">
+							<span class="w-100 pl-3">Title</span>
+							<span class="w-25">Actions</span>
 						</div>
 					</div>
-				</form>
-				<table class="table table-sm table-striped table-hover mt-4">
-					<thead>
-						<tr>
-							<th>#</th>
-							<th>Status</th>
-							<th>Title</th>
-							<th>Actions</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr *ngFor="let todo of todoList">
-							<td>{{todo.id}}</td>
-							<td>
-								<div class="form-check">
-									<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-									<label class="form-check-label" for="flexCheckDefault">complete</label>
+					<ng-container *ngIf="loading; else elseTemplate">
+						<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "large" color = "#fff" type = "square-spin" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
+					</ng-container>
+					<ng-template #elseTemplate>
+						<ng-container *ngIf="todoList.length > 0; else elseTemplate">
+							<div class="card todos border-0">
+								<div class="todo p-3 mb-2" *ngFor="let todo of todoList">
+									<span class="w-100" [ngClass]="{'task-complete': todo.complete }" (click)="complete(todo)">{{todo.title | titlecase }}</span>
+									<span class="w-25 actions">
+										<button class="btn btn-sm btn-outline-danger" title="Remove" (click)="remove(todo)">
+											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+												<path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+												<path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+											</svg>
+										</button>
+										<button *ngIf="!todo.complete" class="btn btn-sm btn-outline-warning ml-2" title="Update" (click)="update(todo)">
+											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+												<path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+												<path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+											</svg>
+										</button>
+									</span>
 								</div>
-							</td>
-							<td>{{todo.title}}</td>
-							<td class="d-flex justify-content-between">
-								<a href="" class="btn btn-sm btn-warning" title="Edit">
-									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-										<path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-										<path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-									</svg>
-								</a>
-								<a href="" class="btn btn-sm btn-danger" title="Delete">
-									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-										<path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-										<path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-									</svg>
-								</a>
-							</td>
-						</tr>
-					</tbody>
-				</table>
+							</div>
+						</ng-container>
+						<ng-template #elseTemplate>
+							<h5 class="text-white text-center">No Items To Do</h5>
+						</ng-template>
+					</ng-template>
+				</div>
 			</div>
 		</div>
-	</div>
 </div>
