--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,108 @@
 /* You can add global styles to this file, and also import other style files */
+// Font
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
+
+// Screen Sizes
+$tablet: 750px;
+
+// Screen mixins
+@mixin tablet {
+	@media (min-width: #{$tablet}) {
+		@content;
+	}
+}
+
+// Declaration
+:root{
+	--mainShadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+	--lightBorder: 1px solid rgba(255, 255, 255, 0.5);
+	--mainColor: #aeaeae;
+	--mainBG: #161623;
+	--mainRadius: 15px;
+
+	--secondaryBG: rgba(255, 255, 255, 0.1);
+	--secondaryColor: #aeaeae9e;
+
+	--tertiaryBG: rgba(255, 255, 255, 0.337);
+}
+
+* {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
+
+body{
+	background-color: var(--mainBG);
+	min-height: 100vh;
+
+	&::before{
+		background: linear-gradient(#e91e63, #2196f3);
+		clip-path: circle(30% at right 80%);
+		transition: transform .2s;
+		position: absolute;
+		height: 100%;
+		content: '';
+		width: 100%;
+		left: 0;
+		top: 0;
+	}
+
+	&::after{
+		background: linear-gradient(#f0f, #f00);
+		clip-path: circle(20% at left 10%);
+		transition: transform .2s;
+		position: absolute;
+		height: 100%;
+		content: '';
+		width: 100%;
+		left: 0;
+		top: 0;
+	}
+
+	.card{
+		background-color: #161623;
+	}
+
+	.card-body, .todo{
+		background-color: var(--secondaryBG);
+		border-radius: var(--mainRadius);
+		color: var(--mainColor);
+	}
+
+	.card-body span{
+		font-family: monospace;
+		font-weight: bold;
+	}
+
+	.btn, .form-control{
+		box-shadow: none;
+		outline: none;
+	}
+
+	.todos{
+		background-color: rgba(255, 255, 255, 0);
+		overflow-y: scroll;
+		max-height: 300px;
+		padding: 0 1rem;
+	}
+
+	.todo{
+		transition: transform .2s;
+		align-items: center;
+		padding: 1rem 0;
+		display: flex;
+		height: 40px;
+		border: none;
+		&:hover{
+			background-color: var(--tertiaryBG);
+			transform: scale(1.02);
+			cursor: pointer;
+		}
+	}
+	
+	.task-complete{
+		text-decoration: line-through;
+		color: var(--secondaryColor);
+	}
+}
