--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,18 +1,35 @@
 <div class="container d-flex justify-content-center align-items-center" style="height: 100vh">
-		<div class="w-75">
+	<div class="w-75">
+		<ng-container *ngIf="error.message || error.status; else elseTemplate">
+			<div id="notfound">
+				<div class="notfound">
+					<div class="notfound-404">
+						<h1>Oops!</h1>
+						<small class="rounded-pill">Something went wrong, please try again later</small>
+					</div>
+				</div>
+			</div>
+		</ng-container>
+		<ng-template #elseTemplate>
 			<div class="alert alert-success d-flex align-items-center" role="alert" *ngIf="success">
 				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi check-circle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
 					<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
 				</svg>
 				<div class="ml-2">Successful</div>
 			</div>
-			<div class="alert alert-danger d-flex align-items-center" role="alert" *ngIf="error.required || error.minlength || error.maxlength">
-				<svg *ngIf="error.required || error.minlength || error.maxlength" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+			<div class="alert alert-danger d-flex align-items-center" role="alert" *ngIf="duplicate">
+				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
 					<path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
 				</svg>
-				<div class="ml-2" *ngIf="error.required">Task Title Is Required!</div>
-				<div class="ml-2" *ngIf="error.minlength">Task title has to be 3 or more characters in length</div>
-				<div class="ml-2" *ngIf="error.maxlength">Task title has to be 10 or less characters in length</div>
+				<div class="ml-2">Task already exists</div>
+			</div>
+			<div class="alert alert-danger d-flex align-items-center" role="alert" *ngIf="invalid.required || invalid.minlength || invalid.maxlength">
+				<svg *ngIf="invalid.required || invalid.minlength || invalid.maxlength" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+					<path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+				</svg>
+				<div class="ml-2" *ngIf="invalid.required">Task Title Is Required!</div>
+				<div class="ml-2" *ngIf="invalid.minlength">Task title has to be 3 or more characters in length</div>
+				<div class="ml-2" *ngIf="invalid.maxlength">Task title has to be 10 or less characters in length</div>
 			</div>
 			<div>
 				<h1 class="text-center text-white">TO DO LIST</h1>
@@ -35,7 +52,9 @@
 						</div>
 					</div>
 					<ng-container *ngIf="loading; else elseTemplate">
-						<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "large" color = "#fff" type = "square-spin" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
+						<ngx-spinner class="loading-spinner" bdColor="rgba(0, 0, 0, 0.8)" size="large" type="square-jelly-box" [fullScreen]="true">
+							<p class="mt-4 pt-5 text-white" > Loading... </p>
+						</ngx-spinner>
 					</ng-container>
 					<ng-template #elseTemplate>
 						<ng-container *ngIf="todoList.length > 0; else elseTemplate">
@@ -65,5 +84,6 @@
 					</ng-template>
 				</div>
 			</div>
-		</div>
+		</ng-template>
+	</div>
 </div>
