--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,7 @@ $tablet: 750px;
 
 * {
 	box-sizing: border-box;
+	transition: 2s;
 	padding: 0;
 	margin: 0;
 }
@@ -104,5 +105,88 @@ body{
 	.task-complete{
 		text-decoration: line-through;
 		color: var(--secondaryColor);
+	}
+
+	#notfound {
+		position: relative;
+		height: 100vh;
+	}
+	
+	#notfound .notfound {
+		transform: translate(-50%, -50%);
+		position: absolute;
+		left: 50%;
+		top: 50%;
+	}
+	
+	.notfound {
+		text-align: center;
+		max-width: 520px;
+		line-height: 1.4;
+		width: 100%;
+		.notfound-404 {
+			margin: 0 auto 20px;
+			position: relative;
+			height: 200px;
+			z-index: -1;
+	
+			h1 {
+				animation: blinking-header 3s ease infinite;
+				font-family: montserrat, sans-serif;
+				transform: translate(-50%, -50%);
+				text-transform: uppercase;
+				color: var(--mainColor);
+				position: absolute;
+				font-size: 236px;
+				font-weight: 200;
+				left: 50%;
+				margin: 0;
+				top: 50%;
+			}
+	
+			small {
+				animation: blinking-small 3s ease infinite;
+				font-family: montserrat, sans-serif;
+				background: var(--mainBG);
+				color: var(--mainColor);
+				display: inline-block;
+				position: absolute;
+				padding: 10px 5px;
+				font-weight: 400;
+				font-size: 16px;
+				margin: auto;
+				bottom: 0;
+				right: 0;
+				left: 0;
+			}
+		}
+	}	
+}
+
+@keyframes blinking-header{
+	0%{
+		color: #e91e63;
+	}
+
+	50%{
+		color: #f0f;
+	}
+
+	100%{
+		color: #f00;
+	}
+}
+
+@keyframes blinking-small{
+	0%{
+		color: #f00;
+	}
+
+	50%{
+		color: #e91e63;
+	}
+
+	100%{
+		color: #f0f;
 	}
 }
